# libzbs

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README  bootstrap  configure.ac  public_config.h.in  wscript
docs/: Doxyfile.in  conventions.dox  conventions.txt  exceptions.dox  exceptions.txt  groups.dox  index.dox  namespaces.dox  wscript
docs/fake/: slice.dox  string.dox
src/: Makefile.am  _utils.cc  error.cc  fmt.cc  map.cc  peg.cc  pegvm.cc  slice.cc  string.cc  strings.cc  unicode.cc  unicode_private_tables.inl  unicode_public_tables.cc  utils.cc  vector.cc  wscript  zbs.hh
src/unicode/: utf8.cc
src/zbs/: _error.hh  _func.hh  _funcref.hh  _map.hh  _optional.hh  _slice.hh  _string.hh  _types.hh  _unicode_tables.hh  _utils.hh  _vector.hh  error.hh  fmt.hh  map.hh  peg.hh  slice.hh  slices.hh  string.hh  strings.hh  types.hh  unicode.hh  vector.hh
src/zbs/unicode/: utf8.hh
test/: Makefile.am  error.cc  fmt.cc  func.cc  funcref.cc  map.cc  optional.cc  peg.cc  slice.cc  slices.cc  stf.hh  string.cc  strings.cc  test_slice.cc  test_slices.cc  test_string.cc  test_unicode_utf8.cc  test_vector.cc  unicode.cc  unicode_utf8.cc  vector.cc  wscript
tools/: maketables.bash  maketables.go
